--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,30 +1,39 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
+  "name": "sistema-pdv-frontend",
+  "version": "1.0.0",
+  "description": "Frontend do sistema PDV",
   "private": true,
   "dependencies": {
-    "axios": "^1.13.4",
-    "clsx": "^1.2.1",
-    "date-fns": "^2.29.3",
-    "lucide-react": "^0.263.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.71.1",
-    "react-hot-toast": "^2.6.0",
-    "react-router-dom": "^6.30.3",
     "react-scripts": "5.0.1",
-    "workbox-background-sync": "^6.4.2",
-    "workbox-broadcast-update": "^6.4.2",
-    "workbox-cacheable-response": "^6.4.2",
-    "workbox-core": "^6.4.2",
-    "workbox-expiration": "^6.4.2",
-    "workbox-google-analytics": "^6.4.2",
-    "workbox-navigation-preload": "^6.4.2",
-    "workbox-precaching": "^6.4.2",
-    "workbox-range-requests": "^6.4.2",
-    "workbox-routing": "^6.4.2",
-    "workbox-strategies": "^6.4.2",
-    "workbox-streams": "^6.4.2"
+    "react-router-dom": "^6.8.1",
+    "axios": "^1.3.4",
+    "react-hook-form": "^7.43.5",
+    "react-hot-toast": "^2.4.0",
+    "lucide-react": "^0.323.0",
+    "clsx": "^1.2.1",
+    "tailwind-merge": "^1.10.0",
+    "date-fns": "^2.29.3",
+    "react-query": "^3.39.3",
+    "workbox-background-sync": "^6.5.4",
+    "workbox-broadcast-update": "^6.5.4",
+    "workbox-cacheable-response": "^6.5.4",
+    "workbox-core": "^6.5.4",
+    "workbox-expiration": "^6.5.4",
+    "workbox-google-analytics": "^6.5.4",
+    "workbox-navigation-preload": "^6.5.4",
+    "workbox-precaching": "^6.5.4",
+    "workbox-range-requests": "^6.5.4",
+    "workbox-routing": "^6.5.4",
+    "workbox-strategies": "^6.5.4",
+    "workbox-streams": "^6.5.4",
+    "jspdf": "^2.5.1",
+    "html2canvas": "^1.4.1",
+    "react-to-print": "^2.14.12"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,9 +60,11 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "typescript": "^4.9.4"
+    "tailwindcss": "^3.2.7",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21"
   },
-  "proxy": "http://localhost:5000"
+  "keywords": ["pdv", "vendas", "react", "pwa"],
+  "author": "Seu Nome",
+  "license": "MIT"
 }
